feat: 当日プラン生成ロジックの追加
